Project2/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> <empty>
Rule 4     statement -> expr ;
Rule 5     statement -> declaration ;
Rule 6     declaration -> TYPE ID
Rule 7     declaration -> TYPE ID = expr
Rule 8     expr -> expr + expr
Rule 9     expr -> expr - expr
Rule 10    expr -> expr * expr
Rule 11    expr -> expr / expr
Rule 12    expr -> expr ASSIGN_ADD expr
Rule 13    expr -> expr ASSIGN_SUB expr
Rule 14    expr -> expr ASSIGN_MULT expr
Rule 15    expr -> expr ASSIGN_DIV expr
Rule 16    expr -> ( expr )
Rule 17    expr -> expr COMP_EQU expr
Rule 18    expr -> expr COMP_NEQU expr
Rule 19    expr -> expr < expr
Rule 20    expr -> expr COMP_LTE expr
Rule 21    expr -> expr > expr
Rule 22    expr -> expr COMP_GTE expr
Rule 23    expr -> expr BOOL_AND expr
Rule 24    expr -> expr BOOL_OR expr
Rule 25    expr -> COMMAND_PRINT ( arguments )
Rule 26    arguments -> expr
Rule 27    arguments -> expr , arguments
Rule 28    expr -> COMMAND_RANDOM ( expr )
Rule 29    expr -> VAL_LITERAL
Rule 30    expr -> variable
Rule 31    expr -> - VAL_LITERAL
Rule 32    expr -> - variable
Rule 33    expr -> variable = expr
Rule 34    variable -> ID

Terminals, with rules where they appear

(                    : 16 25 28
)                    : 16 25 28
*                    : 10
+                    : 8
,                    : 27
-                    : 9 31 32
/                    : 11
;                    : 4 5
<                    : 19
=                    : 7 33
>                    : 21
ASSIGN_ADD           : 12
ASSIGN_DIV           : 15
ASSIGN_MULT          : 14
ASSIGN_SUB           : 13
BOOL_AND             : 23
BOOL_OR              : 24
COMMAND_PRINT        : 25
COMMAND_RANDOM       : 28
COMMENT              : 
COMP_EQU             : 17
COMP_GTE             : 22
COMP_LTE             : 20
COMP_NEQU            : 18
ID                   : 6 7 34
TYPE                 : 6 7
VAL_LITERAL          : 29 31
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

arguments            : 25 27
declaration          : 5
expr                 : 4 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 26 27 28 33
program              : 0
statement            : 2
statements           : 1 2
variable             : 30 32 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> .

    (               reduce using rule 3 (statements -> .)
    COMMAND_PRINT   reduce using rule 3 (statements -> .)
    COMMAND_RANDOM  reduce using rule 3 (statements -> .)
    VAL_LITERAL     reduce using rule 3 (statements -> .)
    -               reduce using rule 3 (statements -> .)
    TYPE            reduce using rule 3 (statements -> .)
    ID              reduce using rule 3 (statements -> .)
    $end            reduce using rule 3 (statements -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . expr ;
    (5) statement -> . declaration ;
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (6) declaration -> . TYPE ID
    (7) declaration -> . TYPE ID = expr
    (34) variable -> . ID

    $end            reduce using rule 1 (program -> statements .)
    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    TYPE            shift and go to state 4
    ID              shift and go to state 13

    variable                       shift and go to state 12
    declaration                    shift and go to state 6
    expr                           shift and go to state 3
    statement                      shift and go to state 9

state 3

    (4) statement -> expr . ;
    (8) expr -> expr . + expr
    (9) expr -> expr . - expr
    (10) expr -> expr . * expr
    (11) expr -> expr . / expr
    (12) expr -> expr . ASSIGN_ADD expr
    (13) expr -> expr . ASSIGN_SUB expr
    (14) expr -> expr . ASSIGN_MULT expr
    (15) expr -> expr . ASSIGN_DIV expr
    (17) expr -> expr . COMP_EQU expr
    (18) expr -> expr . COMP_NEQU expr
    (19) expr -> expr . < expr
    (20) expr -> expr . COMP_LTE expr
    (21) expr -> expr . > expr
    (22) expr -> expr . COMP_GTE expr
    (23) expr -> expr . BOOL_AND expr
    (24) expr -> expr . BOOL_OR expr

    ;               shift and go to state 19
    +               shift and go to state 24
    -               shift and go to state 18
    *               shift and go to state 25
    /               shift and go to state 28
    ASSIGN_ADD      shift and go to state 21
    ASSIGN_SUB      shift and go to state 22
    ASSIGN_MULT     shift and go to state 23
    ASSIGN_DIV      shift and go to state 27
    COMP_EQU        shift and go to state 17
    COMP_NEQU       shift and go to state 30
    <               shift and go to state 14
    COMP_LTE        shift and go to state 26
    >               shift and go to state 29
    COMP_GTE        shift and go to state 16
    BOOL_AND        shift and go to state 15
    BOOL_OR         shift and go to state 20


state 4

    (6) declaration -> TYPE . ID
    (7) declaration -> TYPE . ID = expr

    ID              shift and go to state 31


state 5

    (29) expr -> VAL_LITERAL .

    ;               reduce using rule 29 (expr -> VAL_LITERAL .)
    +               reduce using rule 29 (expr -> VAL_LITERAL .)
    -               reduce using rule 29 (expr -> VAL_LITERAL .)
    *               reduce using rule 29 (expr -> VAL_LITERAL .)
    /               reduce using rule 29 (expr -> VAL_LITERAL .)
    ASSIGN_ADD      reduce using rule 29 (expr -> VAL_LITERAL .)
    ASSIGN_SUB      reduce using rule 29 (expr -> VAL_LITERAL .)
    ASSIGN_MULT     reduce using rule 29 (expr -> VAL_LITERAL .)
    ASSIGN_DIV      reduce using rule 29 (expr -> VAL_LITERAL .)
    COMP_EQU        reduce using rule 29 (expr -> VAL_LITERAL .)
    COMP_NEQU       reduce using rule 29 (expr -> VAL_LITERAL .)
    <               reduce using rule 29 (expr -> VAL_LITERAL .)
    COMP_LTE        reduce using rule 29 (expr -> VAL_LITERAL .)
    >               reduce using rule 29 (expr -> VAL_LITERAL .)
    COMP_GTE        reduce using rule 29 (expr -> VAL_LITERAL .)
    BOOL_AND        reduce using rule 29 (expr -> VAL_LITERAL .)
    BOOL_OR         reduce using rule 29 (expr -> VAL_LITERAL .)
    )               reduce using rule 29 (expr -> VAL_LITERAL .)
    ,               reduce using rule 29 (expr -> VAL_LITERAL .)


state 6

    (5) statement -> declaration . ;

    ;               shift and go to state 32


state 7

    (28) expr -> COMMAND_RANDOM . ( expr )

    (               shift and go to state 33


state 8

    (31) expr -> - . VAL_LITERAL
    (32) expr -> - . variable
    (34) variable -> . ID

    VAL_LITERAL     shift and go to state 35
    ID              shift and go to state 13

    variable                       shift and go to state 34

state 9

    (2) statements -> statements statement .

    (               reduce using rule 2 (statements -> statements statement .)
    COMMAND_PRINT   reduce using rule 2 (statements -> statements statement .)
    COMMAND_RANDOM  reduce using rule 2 (statements -> statements statement .)
    VAL_LITERAL     reduce using rule 2 (statements -> statements statement .)
    -               reduce using rule 2 (statements -> statements statement .)
    TYPE            reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 10

    (16) expr -> ( . expr )
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 36

state 11

    (25) expr -> COMMAND_PRINT . ( arguments )

    (               shift and go to state 37


state 12

    (30) expr -> variable .
    (33) expr -> variable . = expr

    ;               reduce using rule 30 (expr -> variable .)
    +               reduce using rule 30 (expr -> variable .)
    -               reduce using rule 30 (expr -> variable .)
    *               reduce using rule 30 (expr -> variable .)
    /               reduce using rule 30 (expr -> variable .)
    ASSIGN_ADD      reduce using rule 30 (expr -> variable .)
    ASSIGN_SUB      reduce using rule 30 (expr -> variable .)
    ASSIGN_MULT     reduce using rule 30 (expr -> variable .)
    ASSIGN_DIV      reduce using rule 30 (expr -> variable .)
    COMP_EQU        reduce using rule 30 (expr -> variable .)
    COMP_NEQU       reduce using rule 30 (expr -> variable .)
    <               reduce using rule 30 (expr -> variable .)
    COMP_LTE        reduce using rule 30 (expr -> variable .)
    >               reduce using rule 30 (expr -> variable .)
    COMP_GTE        reduce using rule 30 (expr -> variable .)
    BOOL_AND        reduce using rule 30 (expr -> variable .)
    BOOL_OR         reduce using rule 30 (expr -> variable .)
    )               reduce using rule 30 (expr -> variable .)
    ,               reduce using rule 30 (expr -> variable .)
    =               shift and go to state 38


state 13

    (34) variable -> ID .

    =               reduce using rule 34 (variable -> ID .)
    +               reduce using rule 34 (variable -> ID .)
    -               reduce using rule 34 (variable -> ID .)
    *               reduce using rule 34 (variable -> ID .)
    /               reduce using rule 34 (variable -> ID .)
    ASSIGN_ADD      reduce using rule 34 (variable -> ID .)
    ASSIGN_SUB      reduce using rule 34 (variable -> ID .)
    ASSIGN_MULT     reduce using rule 34 (variable -> ID .)
    ASSIGN_DIV      reduce using rule 34 (variable -> ID .)
    COMP_EQU        reduce using rule 34 (variable -> ID .)
    COMP_NEQU       reduce using rule 34 (variable -> ID .)
    <               reduce using rule 34 (variable -> ID .)
    COMP_LTE        reduce using rule 34 (variable -> ID .)
    >               reduce using rule 34 (variable -> ID .)
    COMP_GTE        reduce using rule 34 (variable -> ID .)
    BOOL_AND        reduce using rule 34 (variable -> ID .)
    BOOL_OR         reduce using rule 34 (variable -> ID .)
    ;               reduce using rule 34 (variable -> ID .)
    )               reduce using rule 34 (variable -> ID .)
    ,               reduce using rule 34 (variable -> ID .)


state 14

    (19) expr -> expr < . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 39

state 15

    (23) expr -> expr BOOL_AND . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 40

state 16

    (22) expr -> expr COMP_GTE . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 41

state 17

    (17) expr -> expr COMP_EQU . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 42

state 18

    (9) expr -> expr - . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 43

state 19

    (4) statement -> expr ; .

    (               reduce using rule 4 (statement -> expr ; .)
    COMMAND_PRINT   reduce using rule 4 (statement -> expr ; .)
    COMMAND_RANDOM  reduce using rule 4 (statement -> expr ; .)
    VAL_LITERAL     reduce using rule 4 (statement -> expr ; .)
    -               reduce using rule 4 (statement -> expr ; .)
    TYPE            reduce using rule 4 (statement -> expr ; .)
    ID              reduce using rule 4 (statement -> expr ; .)
    $end            reduce using rule 4 (statement -> expr ; .)


state 20

    (24) expr -> expr BOOL_OR . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 44

state 21

    (12) expr -> expr ASSIGN_ADD . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 45

state 22

    (13) expr -> expr ASSIGN_SUB . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 46

state 23

    (14) expr -> expr ASSIGN_MULT . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 47

state 24

    (8) expr -> expr + . expr
    (8) expr -> . expr + expr
    (9) expr -> . expr - expr
    (10) expr -> . expr * expr
    (11) expr -> . expr / expr
    (12) expr -> . expr ASSIGN_ADD expr
    (13) expr -> . expr ASSIGN_SUB expr
    (14) expr -> . expr ASSIGN_MULT expr
    (15) expr -> . expr ASSIGN_DIV expr
    (16) expr -> . ( expr )
    (17) expr -> . expr COMP_EQU expr
    (18) expr -> . expr COMP_NEQU expr
    (19) expr -> . expr < expr
    (20) expr -> . expr COMP_LTE expr
    (21) expr -> . expr > expr
    (22) expr -> . expr COMP_GTE expr
    (23) expr -> . expr BOOL_AND expr
    (24) expr -> . expr BOOL_OR expr
    (25) expr -> . COMMAND_PRINT ( arguments )
    (28) expr -> . COMMAND_RANDOM ( expr )
    (29) expr -> . VAL_LITERAL
    (30) expr -> . variable
    (31) expr -> . - VAL_LITERAL
    (32) expr -> . - variable
    (33) expr -> . variable = expr
    (34) variable -> . ID

    (               shift and go to state 10
    COMMAND_PRINT   shift and go to state 11
    COMMAND_RANDOM  shift and go to state 7
    VAL_LITERAL     shift and go to state 5
    -               shift and go to state 8
    ID              shift and go to state 13

    variable                       shift and go to state 12
    expr                           shift and go to state 48

state 25
